@@ -3,6 +3,7 @@
 #include "mageec/Database.h"
 #include "mageec/Feature.h"
 #include "mageec/Framework.h"
+#include "mageec/Types.h"
 #include "mageec/Util.h"
 
 
@@ -15,23 +16,50 @@ int main(void)
   std::cout << std::string(db.getVersion()) << std::endl;
 #endif // MAGEEC_DEBUG
 
-  std::vector<mageec::FeatureBase*> fn_features;
-  fn_features.push_back(new mageec::IntFeature(111, 8, "banana"));
-  fn_features.push_back(new mageec::IntFeature(312, 15, "cabbage"));
+  // Emulate some feature extraction
+  std::vector<mageec::FeatureBase*> func_features = {
+    new mageec::IntFeature(1, 15, "function basic block count"),
+    new mageec::IntFeature(2, 26, "function instruction count"),
+    new mageec::BoolFeature(3, true, "returns void")
+  };
 
-  std::vector<mageec::FeatureBase*> mod_features;
-  mod_features.push_back(new mageec::IntFeature(12, 1, "toffee"));
-  mod_features.push_back(new mageec::IntFeature(11, 91, "albatross"));
+  std::vector<mageec::FeatureBase*> module_features = {
+    new mageec::IntFeature(11, 2, "module function count"),
+    new mageec::IntFeature(12, 5, "number of globals in module")
+  };
 
-  mageec::FeatureSetID fn_feature_set = db.newFeatureSet(fn_features);
-  mageec::FeatureSetID mod_feature_set = db.newFeatureSet(mod_features);
+  mageec::FeatureSetID func_feature_set = db.newFeatureSet(func_features);
+  mageec::FeatureSetID module_feature_set = db.newFeatureSet(module_features);
 
-  db.newFeatureGroup({fn_feature_set, mod_feature_set});
+  // Setup feature groups. The module has its feature group, which is also
+  // inherited by the function.
+  mageec::FeatureGroupID func_feature_group =
+    db.newFeatureGroup({module_feature_set, func_feature_set});
+  mageec::FeatureGroupID module_feature_group =
+    db.newFeatureGroup({module_feature_set});
 
-  std::vector<mageec::ParameterBase*> params;
-  params.push_back(new mageec::RangeParameter(12, 91, "food"));
-  params.push_back(new mageec::BoolParameter(43, 18, "potato"));
-  db.newParameterSet(params);
+  // Setup the global parameters used for the compilation
+  // These are shared by the module and function compilations
+  std::vector<mageec::ParameterBase*> params = {
+    new mageec::BoolParameter(1, true, "debug enabled"),
+    new mageec::RangeParameter(2, 2, "optimization level"),
+    new mageec::RangeParameter(3, 5, "global inline threshold")
+  };
+
+  mageec::ParameterSetID parameter_set = db.newParameterSet(params);
+
+  // Create compilations for the module and function
+  mageec::CompilationID module_compilation = db.newCompilation(
+    "hello.c", "module", module_feature_group, parameter_set,
+    mageec::util::Option<mageec::PassSequenceID>(),
+    mageec::util::Option<mageec::CompilationID>()
+  );
+
+  db.newCompilation(
+    "foo()", "function", func_feature_group, parameter_set,
+    mageec::util::Option<mageec::PassSequenceID>(),
+    module_compilation
+  );
 
   return 0;
 }
